@@ -26,6 +26,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-01-27 [A] Added check to plugin manager for version requirements - backported feature from cpg1.5.x (thread ID 63279) {GauGau}
 2010-01-02 [M] Updated header to reflect new year {GauGau}
 2009-10-26 [B] Updated Italian Language file {GauGau}
 2009-08-31 [B] Fixed permission check in crop/rotate wrongly denying access {Nibbler}
